# racecontrol

./: .gitignore  LICENSE  README.md  pyproject.toml
bench/escalation_eval/: RESULTS.md  eval-adversarial.jsonl  eval-easy.jsonl  eval-hard.jsonl  harness.py  label_decisions.py  shadow_eval.py  train_classifier.py
bench/escalation_eval/results/: RESULTS-classifier-v0.md  classifier_synthetic_v0.json  labeled_live.jsonl
config/: router.example.toml
docs/: DESIGN.md
src/router/: __init__.py  backends.py  chat.py  circuit.py  cli.py  config.py  dispatch.py  errors.py  policy.py  server.py  telemetry.py
tests/: fakes.py  test_backends.py  test_chat.py  test_circuit.py  test_config.py  test_dispatch.py  test_label_decisions.py  test_policy.py  test_reload.py  test_server.py  test_telemetry.py  test_train_classifier.py
